fix: remove flex-wrap from inner-container.

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -105,3 +105,7 @@ small {
         font-size: 1rem;
     }
 }
+
+.logo {
+    max-height: 100%;
+}
